--- a/안녕하세요, 임베디드 개발자 김규민입니다..md
+++ b/안녕하세요, 임베디드 개발자 김규민입니다..md
@@ -1,36 +1,35 @@
-
 <h1 style="color:#4bacc6;">엄청난 노력보다 올바른 방향을 더 중요시합니다. 🎯</h1> 
 
-# 다양한 분야의 현업자에게 조언을 받아 성장하려고 합니다<br>모각코, 임베디드 스터디에 매주 참여하여 개발자로서의 성장에 대한 고민을 해결하고 있습니다.
-<h2 style="color:#4bacc6;">기본에 충실해야 한다 생각합니다 🛞</h2> 
+## 다양한 분야의 현업자에게 조언을 받아 성장하려고 합니다<br>모각코, 임베디드 스터디에 매주 참여하여 개발자로서의 성장에 대한 고민을 해결하고 있습니다.
+<h3 style="color:#4bacc6;">기본에 충실해야 한다 생각합니다 🛞</h3> 
 
-## 기본 지식이 부족했던 C언어를 심도있게 공부하기 위해 전문가를 위한 C 책을 주제로 스터디를 진행하면서 방어적 프로그래밍, C의 객체지향 설계에 대해 알게 되었습니다 
+#### 기본 지식이 부족했던 C언어를 심도있게 공부하기 위해 전문가를 위한 C 책을 주제로 스터디를 진행하면서 방어적 프로그래밍, C의 객체지향 설계에 대해 알게 되었습니다 
+<h5 style="color:#4bacc6;">나만의 제품을 만들어가고 싶습니다 💎 </h5> 
 
-<h2 style="color:#4bacc6;">나만의 제품을 만들어가고 싶습니다 </h2> 
-### 프로젝트를 하면서 나만의 제품을 만드는 것에 성취감을 느꼈습니다.<br>그래서 현실에서 작동하는 로봇에 대해 관심이 있습니다
+**프로젝트를 하면서 나만의 제품을 만드는 것에 성취감을 느꼈습니다.<br>그래서 현실에서 작동하는 로봇에 대해 관심이 있습니다**
 
-| My Profile                                                                         | **About Me**<br>                                                                                                                                                                            |
-| ---------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ![[Snapinsta.app_359844190_17993986235094712_4119134888063148665_n_1080.jpg\|200]] | 📧** a31620504@gmail\.com**<br><br>📞 **010-3162-0504**<br><br>🐧** [Github](https://github.com/wbhaao)**<br><br>📗** [Velog](https://velog.io/@veluga)**<br><br>🏫** 부산소프트웨어마이스터고** (재학 중) |
+| My Profile                            | **About Me**<br>                                                                                                                                                                            |
+| ------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| ![[IMG_20240622_145906_792.jpg\|200]] | 📧** a31620504@gmail\.com**<br><br>📞 **010-3162-0504**<br><br>🐧** [Github](https://github.com/wbhaao)**<br><br>📗** [Velog](https://velog.io/@veluga)**<br><br>🏫** 부산소프트웨어마이스터고** (재학 중) |
 
 ---
 
-# 블로그
+# ✏️블로그
 ### 임베디드 OS 개발 프로젝트
 
 책을 보고 코딩하면서 알게 된 점을 담은 글입니다.
-[[2장] 임베디드 OS 개발 프로젝트 / 개발환경 구성하기](https://velog.io/@wbhaao/2%EC%9E%A5-%EC%9E%84%EB%B2%A0%EB%94%94%EB%93%9C-OS-%EA%B0%9C%EB%B0%9C-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EB%B0%9C-%ED%99%98%EA%B2%BD-%EA%B5%AC%EC%84%B1%ED%95%98%EA%B8%B0)
+[\[2장\] 임베디드 OS 개발 프로젝트 \/ 개발환경 구성하기](https://velog.io/@wbhaao/2%EC%9E%A5-%EC%9E%84%EB%B2%A0%EB%94%94%EB%93%9C-OS-%EA%B0%9C%EB%B0%9C-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-%EA%B0%9C%EB%B0%9C-%ED%99%98%EA%B2%BD-%EA%B5%AC%EC%84%B1%ED%95%98%EA%B8%B0)
 
 ### 책 <달리기를 말할 때 내가 하고 싶은 이야기> 독후감
 
 기술적인 글 이외에도 책을 읽고 나서 제 생각을 정리하는 글도 작성합니다
 [달리기를 말할 때 내가 하고 싶은 이야기](https://velog.io/@veluga/%EB%8B%AC%EB%A6%AC%EA%B8%B0%EB%A5%BC-%EB%A7%90%ED%95%A0-%EB%95%8C-%EB%82%B4%EA%B0%80-%ED%95%98%EA%B3%A0-%EC%8B%B6%EC%9D%80-%EC%9D%B4%EC%95%BC%EA%B8%B0-%EB%8F%85%ED%9B%84%EA%B0%90)
 
-# 활동
+# 🏃활동
 
-### 🇸🇬
+### <font color=red>singa</font>pore
 ### NUS(싱가포르 국제 대학) 강의 수강
-2024. 5. 18 ~ 2024. 5. 24
+\2024. 5. 18 ~ 2024. 5. 24
 [회고록 →](www.google.com)
 BSSM 전교생이 싱가포르 NUS에서 SW 관련 수업을 4일동안 듣고 마지막날 배운 내용을 토대로 프로젝트를 만들어 발표하는 활동입니다.
 
@@ -44,7 +43,7 @@ NUS에 재학중인 한인 멘토분들과 NUS 교수님을 만나 다양한 교
 - 매주 스터디 주제(C, RTOS)를 정하고, 발표하며 지식을 공유했습니다.
 - [스터디 링크 →](https://github.com/embedded-study-group)
 
-# 수상
+# 🏆수상
 
 #### 23년 제8회 부산 ICT 융합 해커톤 대회 대상(1위) - 동명대학교 SW중심대학단장상 (2023) <font color="#a4a4a4">2023. 8</font>
 >부산 지역 학생들이 모여 무박 2일 동안 ICT 관련 프로젝트를 개발하는 대회
@@ -74,13 +73,13 @@ NUS에 재학중인 한인 멘토분들과 NUS 교수님을 만나 다양한 교
 
 - **교내 임베디드 해커톤 장려상** (2024)
 
-- **23년 AI 허브 개방데이터 아이디어 경진대회 우수상** 
+- **23년 AI 허브 개방데이터 아이디어 경진대회 우수상**
 
 - **23년  한국어 AI 경진대회 입상**
 
 - **교내 AI/SW 경진대회 장려상**
 
-# 교과 활동
+# 📖교과 활동
 
 - 1학기 **교과우수상 -** 디자인 일반, 컴퓨터 구조, 프로그래밍 (2023)
 
@@ -97,14 +96,13 @@ NUS에 재학중인 한인 멘토분들과 NUS 교수님을 만나 다양한 교
 - 영어 말하기 대회 **우수상** (2023)
 
 
-# 참가
+# 🎟️참가
 
 - 2024 **부산/경남 임베디드 스터디** 참여 (2024)
 
 - 2023 **파이콘 컨퍼런스** 참가 (2023)
 
----
-## 알고리즘 대회
+# 🥇알고리즘 대회
 
 백준 아이디 : _***dlflon11***_
 
